# tmp

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_v0.7.0.md  MANIFEST.in  PATCH_README.md  Project43.rar  README-HOTFIX.txt  README-W4.md  README-W5-W6.md  README.md  README.txt  README_OVERLAY.md  README_PHASE0.md  README_e1_5.txt  README_patch.md  README_patch_v3.md  coverage.xml  dbfirst.patch  ersuserPycharmProjectsProject43 git stash show -p 'stash@{0}'   # en son stash'ı göster  fix-psi.patch  git  github_actions_demo.yml  list.py  mypy.ini  precommit_pytest.py  pyproject.toml  pytest.ini  readme Critical Gap.md  requirements-dev.txt  requirements.txt  run_phase0_tests.py  run_phase1_tests.py  run_phase2_tests.py  run_phase3_tests.py  run_phase4_tests.py  run_phase5_tests.py  run_phase6_tests.py  (+4 more)
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  data.yml  explain.yml  mlops.yml  perf.yml  pr-body-check.yml  regime.yml  release.yml  rt-latency.yml
.mlruns/: registry.json
.pc_home/: db.db
New folder/: README.md  pyproject.toml
New folder/src/algo5/: __init__.py
New folder/src/algo5.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
New folder/src/algo5/data/: integrity.py  loader.py  schemas.py  validate.py
New folder/src/algo5/data/feature_store/: cache.py  catalog.py  store.py
New folder/src/algo5/data/quality/: monitor.py
New folder/src/algo5/features/: ta.py
New folder/tests/: conftest.py
New folder/tests/data/: test_feature_store.py  test_integrity.py  test_quality_monitor.py  test_schemas_validate.py
New folder/ui/: streamlit_app.py
New folder/ui/tabs/: data.py
_tests_bundle/data/: conftest.py  test_feature_store.py  test_integrity.py
_tests_bundle/execution/: test_models_matcher_gateway.py
_tests_bundle/integration/: test_event_driven_flow.py
_tests_bundle/smoke/: test_cli_bus_matcher.py
examples/: quickstart.py
src/algo5.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.txt  conftest.py
tests/api/: test_server.py
tests/backtest/: test_validators.py  test_walkforward.py
tests/compliance/: test_report_signature.py
tests/data/: conftest.py  test_feature_store.py  test_feature_store_cache_catalog.py  test_feature_store_integrity.py  test_integrity.py  test_integrity_more.py  test_loader.py  test_monitor_esg.py  test_monitor_security.py  test_quality_monitor.py  test_schemas.py  test_schemas_validate.py  test_utils_smoke.py  test_validate_ohlcv.py
tests/db/: test_features_upsert.py  test_schema.py
tests/execution/: test_bracket.py  test_bracket_trailing_and_gateway.py  test_engine_smoke.py  test_engine_v2_smoke.py  test_matcher_market_limit.py  test_models_matcher_gateway.py  test_oco_trailing.py  test_timeinforce_ioc_fok.py
tests/explain/: test_permutation.py
tests/features/: test_sentiment.py
ui/: streamlit_app.py  streamlit_app_w4.py  streamlit_app_w56.py
ui/tabs/: data.py  (+9 more)
(+109 files in other folders)
