[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E","F","B","UP","SIM","C90"]
ignore = []

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
python_version = "3.12"
mypy_path = "src"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
exclude = ["build/","dist/"]

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"

[[tool.mypy.overrides]]
module = ["algo5.metrics.metrics", "algo5.data.feature_store.store"]
disable_error_code = ["unreachable"]
