[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo5"
version = "0.1.0"
description = "ALGO5 research & trading framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Team" }]
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "black", "pytest", "pytest-cov"]
test = ["pytest", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]          # <<< src-layout
include = ["algo5*"]     # <<< import adı 'algo5' olacak
